# swigmake

./: CMakeLists.txt  package.xml
cmake/: DrakeUseSWIG.cmake
swig/python/: pycontainer.swg
